src/test/deca/syntax/valid/synt/class_field_protected_visibility.deca
/*
    Description: Test sur la déclaration d'un attribut de classe avec la visibilité protected

    Résultat : OK
*/
class C{
    protected int x;
}

{
}
