src/test/deca/syntax/invalid/synt/assign_010_to_int.deca
/*
    Description : Initialisation d'un entier avec 010

    Résultat : Erreur syntaxique
*/
{
    int x = 010;
}
